--- a/CommandSchedulerService/CommandSchedulerService.csproj
+++ b/CommandSchedulerService/CommandSchedulerService.csproj
@@ -1,17 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Worker">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net9.0-windows</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>dotnet-CommandSchedulerService-80c5d146-7990-4083-a6d7-7712a524181c</UserSecretsId>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Compile Remove="ConfigurationManager.cs" />
-    <Compile Remove="TaskItem.cs" />
-  </ItemGroup>
 
   <ItemGroup>
     <Compile Include="..\CommonFiles\ConfigurationManager.cs" Link="ConfigurationManager.cs" />
@@ -19,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0-preview.1.25080.5" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="10.0.0-preview.1.25080.5" />
   </ItemGroup>
-
 </Project>
