--- a/CommandSchedulerService2/CommandSchedulerService2.csproj
+++ b/CommandSchedulerService2/CommandSchedulerService2.csproj
@@ -1,17 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Worker">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net9.0-windows</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>dotnet-CommandSchedulerService2-eb8030a7-b15e-4af6-ae30-826b395bb617</UserSecretsId>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Compile Remove="ConfigurationManager.cs" />
-    <Compile Remove="TaskItem.cs" />
-  </ItemGroup>
 
   <ItemGroup>
     <Compile Include="..\CommonFiles\ConfigurationManager.cs" Link="ConfigurationManager.cs" />
@@ -19,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0-preview.1.25080.5" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="10.0.0-preview.1.25080.5" />
   </ItemGroup>
-
 </Project>
